<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F77512"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/aboutbutton"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="aboutPage"
        android:text="@string/buttonSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="158dp"
        android:layout_height="60dp"
        android:onClick="ratePage"
        android:text="@string/rate_ride"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutbutton"
        app:layout_constraintVertical_bias="0.174" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="352dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/kwImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kennywoodlogo"
        tools:srcCompat="@drawable/kennywoodlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>